Оставлю два типа примечаний

--- a/modules/appendix/pages/controls/docsvision/CardChooseBox.adoc
+++ b/modules/appendix/pages/controls/docsvision/CardChooseBox.adoc
@@ -55,7 +55,7 @@ image::ROOT:card-choose-box.png[Элемент управления "CardChooseB
 </Search>
 ----
 +
-[IMPORTANT]
+[WARNING]
 ====
 Перед записью запроса в свойство элемента управления `_CardChooseBox_`, запрос необходимо перевести из многострочного варианта в однострочный.
 ====
