--- a/modules/appendix/pages/controls/docsvision/CommunicativeChooseBox.adoc
+++ b/modules/appendix/pages/controls/docsvision/CommunicativeChooseBox.adoc
@@ -61,7 +61,7 @@ private void GetSelectedEmployee_Click(object sender, EventArgs e)
 * `*ButtonClick*` -- нажатие кнопки очистки строки поиска.
 * `*CustomizeSearchQuery*` -- событие срабатывает при выполнении быстрого поиска. Обработка события позволяет изменить поисковый запрос, результаты которого отображаются при вводе текста.
 +
-[CAUTION]
+[WARNING]
 ====
 Событие `*CustomizeSearchQuery*` вызывается не каждый раз при вводе символов, а только при обращении к серверу {dv}. При первом обращении результаты помещаются в локальный кэш, время жизни которого -- 5 секунд. Если следующий поисковый запрос основан на текущем и кэш не старше 5 секунд, то обращений к серверу не будет и событие `*CustomizeSearchQuery*` не сработает (результаты будут выбраны из кэша).
 ====
