--- a/modules/appendix/pages/controls/docsvision/RowChooseBox.adoc
+++ b/modules/appendix/pages/controls/docsvision/RowChooseBox.adoc
@@ -68,7 +68,7 @@ private void Sender_CustomTextValue(System.Object sender, CustomTextValueEventAr
 <.> Получение организации контрагента.
 <.> Присвоение отображаемого значения.
 +
-[CAUTION]
+[WARNING]
 ====
 Данное событие не сработает до завершения загрузки карточки. Если нужно поддержать обработку на более раннем этапе, добавьте в `CardActivated` код вида:
 
