--- a/modules/appendix/pages/controls/docsvision/dv-controls.adoc
+++ b/modules/appendix/pages/controls/docsvision/dv-controls.adoc
@@ -1,6 +1,6 @@
 = Элементы управления Docsvision
 
-[IMPORTANT]
+[WARNING]
 ====
 Чтобы использовать данные компоненты, необходимо иметь лицензию разработчика для работы с компонентами DevExpress.
 ====
