--- a/modules/appendix/pages/controls/obsolete/BoundChooseBox.adoc
+++ b/modules/appendix/pages/controls/obsolete/BoundChooseBox.adoc
@@ -12,7 +12,7 @@ image::ROOT:bound-choose-box.png[Элемент управления "BoundChoos
 +
 Особым случаем является ссылка на строку секции карточки папок -- в этом случае элемент управления откроет на выбор {wincl}, в котором разрешено выбирать папки.
 
-[IMPORTANT]
+[WARNING]
 ====
 Если поле `RefID` карточки является нетипизированным (не указаны значения типа и секции связанной карточки) -- то `_BoundChooseBox_` не сможет работать с таким полем! В этом случае рекомендуется использовать элемент управления `_CustomChooseBox_`.
 ====
