--- a/modules/appendix/pages/controls/obsolete/data-source/RowDataSource.adoc
+++ b/modules/appendix/pages/controls/obsolete/data-source/RowDataSource.adoc
@@ -15,7 +15,7 @@ image::ROOT:row-data-source-depts.png[Мастер настройки "RowDataSo
 +
 Дополнительный признак `*Get all section rows*` на этой же странице указывает на необходимость получения всех строк иерархической секции, без учета уровня иерархии (например, получить все подразделения и организации из справочника сотрудников).
 
-[IMPORTANT]
+[WARNING]
 ====
 При использовании этого признака, результирующий набор строк в источнике данных *не* будет доступен для добавления и удаления строк!
 ====
