--- a/modules/appendix/pages/webservice/files/FileCreateEx.adoc
+++ b/modules/appendix/pages/webservice/files/FileCreateEx.adoc
@@ -2,7 +2,7 @@
 
 Создаёт новый файл.
 
-[IMPORTANT]
+[WARNING]
 ====
 Данный метод не загружает содержимое файла в созданную в {dv} сущность -- для этого необходимо использовать метод `_xref:appendix:webservice/files/FileWrite.adoc[FileWrite]_`.
 ====
