--- a/modules/bpms/pages/scenario-save.adoc
+++ b/modules/bpms/pages/scenario-save.adoc
@@ -13,7 +13,7 @@ image::ROOT:build-script.png[Компиляция скрипта из {dv}]
 .. Должен содержать минимум один публичный (`publiс`) класс.
 .. Должны присутствовать публичные статические (`public static`) методы. В рамках одного _сценария_ возможно наличие произвольного числа таких методов -- каждый из них будет выступать как отдельная _функция_ в "Универсальной функции".
 +
-[IMPORTANT]
+[WARNING]
 ====
 Аргументы данного метода, так же как и возвращаемое значение (если предусмотрено) должны иметь тип, реализованный шлюзами Workflow (включая шлюз к базовым типам).
 ====
