--- a/modules/bpms/pages/scenarios-develop.adoc
+++ b/modules/bpms/pages/scenarios-develop.adoc
@@ -31,7 +31,7 @@
 * `DocsVision.SecurityManager.Interop.dll`
 * `DocsVision.HelperAPI.Interop.dll`
 
-[IMPORTANT]
+[WARNING]
 ====
 В сценариях, приведенных далее, будет использоваться сборка `DocsVision.Platform.ObjectManager.dll` (в параметрах сценария установлен флаг `*Не добавлять ссылку на DocsVision.ObjectManager.Interop.dll*`) -- нужно учитывать при указании типа переменных.
 ====
