--- a/modules/cards/pages/connect-to-dv-server.adoc
+++ b/modules/cards/pages/connect-to-dv-server.adoc
@@ -4,7 +4,7 @@
 
 С физической точки зрения, сессия -- контекст сеанса связи с сервером для конкретного пользователя. Сессия ассоциируется с конкретной доменной учетной записью, от имени которой установлено соединение, и в дальнейшем все привилегии на доступ к данным из этой сессии будут проверяться именно для этой учетной записи.
 
-[IMPORTANT]
+[WARNING]
 ====
 Для выполнения операции с привилегиями другого пользователя необходимо явно указать его данные при создании сессии.
 ====
