--- a/modules/cards/pages/export-import-print.adoc
+++ b/modules/cards/pages/export-import-print.adoc
@@ -20,7 +20,7 @@ card.SaveXml(file, ExportFlags.LinkedCards & ExportFlags.LinkedRows);
 
 Позволяет загрузить в систему данные на основании строки (или файла) в формате XML, ранее выгруженного из этой же (или другой) базы данных {dv}.
 
-[IMPORTANT]
+[WARNING]
 ====
 Корректность импорта не гарантируется, если версия базы данных, из которой данные были экспортированы, отличается от версии базы, куда они импортируются.
 ====
