--- a/modules/cards/pages/files.adoc
+++ b/modules/cards/pages/files.adoc
@@ -50,7 +50,7 @@ Guid newFileId = file.Id; <.>
 
 Изменение оперативного статуса файлов выполняется с помощью методов `FileData.TakeOffline` и `FileData.BringOnline`.
 
-[IMPORTANT]
+[WARNING]
 ====
 Для выполнения операций вытеснения/восстановления файлов из внешнего хранилища требуется наличие привилегии оператора архива (членство в группе *{dv-power-users-serv}*).
 ====
