--- a/modules/cards/pages/folder-shortcut.adoc
+++ b/modules/cards/pages/folder-shortcut.adoc
@@ -67,7 +67,7 @@ if (!folder.HasSubfolders || folder.Folders.Count(m=>m.Name.Equals(folderName)) 
 
 Сильный ярлык держит сильную ссылку на карточку, и отображается обычной иконкой карточки. Для пользователя сильный ярлык полностью соответствует нахождению карточки в этой папке, поэтому правомерно говорить о том, что "карточка лежит в папке". При удалении ярлыка удаляется сама карточка, если на неё нет других сильных ссылок. Если программно нужно удалить карточку, на которую могут быть ярлыки, то надо воспользоваться методом `xref:Platform-ObjectManager-SystemCards:FolderCard.DeleteCard_MT.adoc[FolderCard.DeleteCard]`, который удаляет карточку с учетом существующих ярлыков.
 
-[CAUTION]
+[WARNING]
 ====
 Для каждой карточки можно создать только один сильный ярлык. В случае повторного вызова метода создания сильного ярлыка для той же карточки -- метод вернет ошибку.
 ====
