--- a/modules/cards/pages/general-information.adoc
+++ b/modules/cards/pages/general-information.adoc
@@ -295,7 +295,7 @@ image::ROOT:card-sample-structure.png[Структура экземпляра к
 
 Типы, приведенные далее, определены в сборках: `DocsVision.BackOffice.ObjectModel.dll` -- содержит типы, описывающие сущности карточки и `DocsVision.Platform.ObjectModel.dll` -- содержит общие базовые классы.
 
-[IMPORTANT]
+[WARNING]
 ====
 Приведенные далее сведения относятся только к карточкам, объектная модель которых унаследована от базового класса `xref:BackOffice-ObjectModel-BaseCard:BaseCard_CL.adoc[BaseCard]`. Если объектная модель создана на основе базовых классов из сборки `DocsVision.Platform.ObjectModel.dll`, механизм доступа к данным будет отличаться.
 ====
