--- a/modules/cards/pages/init-object-context.adoc
+++ b/modules/cards/pages/init-object-context.adoc
@@ -10,7 +10,7 @@
 . Получить экземпляр класса `xref:Platform-ObjectModel:ObjectContext_CL.adoc[ObjectContext]` -- сущность контекста объектов.
 . Используя платформенные сервисы, загрузить в контекст объектов xref:general-information.adoc#mappers[преобразователи данных] и xref:general-information.adoc#services[необходимые сервисы].
 
-[IMPORTANT]
+[WARNING]
 ====
 Создание и инициализация _контекста объектов_ является затратной операцией с точки зрения потребления аппаратных ресурсов. Рекомендуется использовать созданный и проинициализированный _контекст объектов_, а не создавать новый.
 ====
