--- a/modules/cards/pages/signing-encryption.adoc
+++ b/modules/cards/pages/signing-encryption.adoc
@@ -18,7 +18,7 @@
 
 Крипто-объекты сохраняются в специальной системной таблице (*dvsys_crypto*) и привязаны напрямую конкретному подписанному или зашифрованному объекту системы.
 
-[IMPORTANT]
+[WARNING]
 ====
 Платформа оперирует уже готовыми крипто-объектами, а выполнение самих операций подписи и шифрования при этом должно выполняться другими средствами, например при помощи библиотеки http://msdn.microsoft.com/ru-ru/library/system.security.cryptography[`System.Security.Cryptography`] для .NET Framework.
 ====
@@ -35,7 +35,7 @@
 * `StoreKey` -- сохраняет ключ шифрования.
 * `StoreSignature` -- сохраняет ключ ЭП.
 
-[IMPORTANT]
+[WARNING]
 ====
 Для файлов, подпись и шифрование которых реализованы в самой платформе, время жизни связанных крипто-объектов контролируется автоматически. То есть, например, при удалении файла все наложенные на него подписи также будут автоматически удалены. Но при создании крипто-объектов собственного типа (не относящихся к файлам) разработчик должен сам контролировать время их жизни и заботиться об удалении.
 ====
