--- a/modules/cards/pages/use-reports.adoc
+++ b/modules/cards/pages/use-reports.adoc
@@ -2,7 +2,7 @@
 
 Отчёт -- механизм, предоставляющий возможность получения прямого доступ к БД {dv} с целью получения сложных выборок данных, повышения производительности работы Решения, получения данных из внешней БД и т.п.
 
-[IMPORTANT]
+[WARNING]
 ====
 Отчёт работает с данными минуя модели безопасности {dv}, поэтому задача обеспечения защиты данных, в данном случае, возлагается на разработчика.
 
