--- a/modules/external-storages/pages/connector-sample.adoc
+++ b/modules/external-storages/pages/connector-sample.adoc
@@ -2,7 +2,7 @@
 
 В данном пункте рассмотрен пример создания провайдера к внешнему хранилищу Google Drive для хранения бинарных данных файлов {dv}.
 
-[CAUTION]
+[WARNING]
 ====
 Данный пример не является готовым решением для использования Google Drive в качестве внешнего хранилища, а только демонстрирует способ создания провайдера к нему.
 ====
@@ -76,7 +76,7 @@ using (var stream =
 . Скопируйте на сервер {dv} папку `AskToken\bin\Debug\token.json\` и файл `AskToken\bin\Debug\credentials.json`. Данные файлы потребуются для работы провайдера к Google Drive. Файл и папку нужно скопировать в каталог доступный для сервера {dv}, но недоступный рядовым пользователям (из-за наличия конфиденциальных данных в файлах).
 . Подключите новый тип хранилища к {dv}.
 +
-CAUTION: Проверяйте работу компонентов на тестовом сервере {dv}.
+WARNING: Проверяйте работу компонентов на тестовом сервере {dv}.
 +
 .. Откройте {cns}.
 .. Перейдите в раздел menu:Настройки сервер[Базы данных]. Выберите настраиваемую БД и нажмите кнопку *Настройка*., чтобы открыть окно _Свойства и управление базой данных_.
