--- a/modules/external-storages/pages/storage-rule.adoc
+++ b/modules/external-storages/pages/storage-rule.adoc
@@ -2,7 +2,7 @@
 
 Администратор может настроить правила помещения бинарных данных файлов в определённые группы хранилищ, в зависимости от типа файла, его размера или принадлежности к справочникам {dv}. Разработчику предоставляется возможность реализовать собственные типы правил для настройки условий помещения в хранилища.
 
-[IMPORTANT]
+[WARNING]
 ====
 Для использования собственного типа правил добавление в хранилище необходима лицензия на систему {dv} с редакцией "Ecm".
 ====
