--- a/modules/external-storages/pages/сonnector-to-storage.adoc
+++ b/modules/external-storages/pages/сonnector-to-storage.adoc
@@ -5,7 +5,7 @@
 * Стандартных: файловая система, внешняя БД или FileStream.
 * Собственных, для взаимодействия с которыми необходимо разработать специальные провайдеры.
 
-[IMPORTANT]
+[WARNING]
 ====
 Для использования собственного внешнего хранилища необходима лицензия на систему {dv} с редакцией _Ecm_.
 ====
