--- a/modules/samples/pages/components/command-plugin.adoc
+++ b/modules/samples/pages/components/command-plugin.adoc
@@ -110,7 +110,7 @@ namespace DocsVision.Test.NavPluging
 
 В реализуемых методах, проверка параметра `command` не выполняется, однако в реальных проектах это может понадобиться.
 
-[IMPORTANT]
+[WARNING]
 ====
 Готовая сборка должна иметь строгое имя, см. http://msdn.microsoft.com/ru-ru/library/xwb8f617.aspx[Создание и использование сборок со строгими именами].
 ====
