--- a/modules/samples/pages/components/employee-control.adoc
+++ b/modules/samples/pages/components/employee-control.adoc
@@ -1,6 +1,6 @@
 = Пример разработки элемента управления для выбора сотрудника
 
-[IMPORTANT]
+[WARNING]
 ====
 Для разработки элементов управления, совместимых с _Конструктором разметок_, требуется лицензия на компоненты (WinForms) DevExpress.
 ====
