--- a/modules/samples/pages/components/resources-movement-card.adoc
+++ b/modules/samples/pages/components/resources-movement-card.adoc
@@ -83,7 +83,7 @@ image::ROOT:description-field.png[Добавление поля "Description"]
 +
 После создания схемы, библиотека карточек должна быть загружена на сервер {dv} (см. раздел xref:solutions:cards/scheme/load-scheme.adoc[Загрузка схем карточек в базу данных]).
 +
-[IMPORTANT]
+[WARNING]
 ====
 После добавления карточки потребуется перезапуск сервиса {dv} или перезагрузка сервера
 ====
