--- a/modules/samples/pages/solution/card-lib/lib-component.adoc
+++ b/modules/samples/pages/solution/card-lib/lib-component.adoc
@@ -15,7 +15,7 @@
 //В статье https://docsvision.zendesk.com/entries/80645519[Создание компонента библиотеки карточек на C++] рассмотрен пример разработки компонента библиотеки на языке C++.
 ====
 
-[CAUTION]
+[WARNING]
 ====
 В версии модуля {pl} 5.5.2 требования к компоненту библиотеки карточек были изменены.
 ====
