--- a/modules/samples/pages/solution/card-lib/new-lib.adoc
+++ b/modules/samples/pages/solution/card-lib/new-lib.adoc
@@ -1,6 +1,6 @@
 = Разработка библиотеки карточек
 
-[IMPORTANT]
+[WARNING]
 ====
 Информация, приведенная в данном и последующих разделах, рассчитана на то, что разработчик знаком с принципами разработки новых библиотек карточек (см. раздел xref:solutions:cards/scheme/dev-cards-and-lib.adoc[Разработка карточек и библиотек карточек]).
 ====
