--- a/modules/samples/pages/solution/card-sql-package.adoc
+++ b/modules/samples/pages/solution/card-sql-package.adoc
@@ -9,7 +9,7 @@
 Файлы пакета `CardPackage` расположены в подкаталоге `CardPackage` приложенного xref:ROOT:attachment$netstatSolution.zip[архива].
 ====
 
-[IMPORTANT]
+[WARNING]
 ====
 Все действия, связанные с формированием пакетов `CardPackage` и `SqlPackage`, должны выполняться на отдельном сервере {dv}.
 ====
