--- a/modules/samples/pages/solution/installer/client.adoc
+++ b/modules/samples/pages/solution/installer/client.adoc
@@ -10,7 +10,7 @@
 .Типовой сценарий установки клиентской части:
 . Создать подкаталог решения в каталоге {wincl}а.
 +
-[IMPORTANT]
+[WARNING]
 ====
 Крайне желательно соблюсти правило размещения компонентов в каталоге {wincl}а: `Каталог-{wincl}а\Название-решения`.
 ====
