--- a/modules/samples/pages/solution/snap-in/new-snap-in.adoc
+++ b/modules/samples/pages/solution/snap-in/new-snap-in.adoc
@@ -7,7 +7,7 @@
 
 На данном этапе необходимо создать расширение для Консоли настройки (_SnapIn_), которое отвечает за загрузку `CardPackage` и `SqlPackage` в {dv}, а также регистрирует пакет установки клиентской части.
 
-[IMPORTANT]
+[WARNING]
 ====
 _SnapIn_ является обязательным компонентом, при условии, что решение использует собственную библиотеку карточек.
 ====
