--- a/modules/scripts/pages/get-control.adoc
+++ b/modules/scripts/pages/get-control.adoc
@@ -1,6 +1,6 @@
 = Доступ к элементам управления карточки
 
-[IMPORTANT]
+[WARNING]
 ====
 Приведенная далее функциональность доступна только карточкам, компонент которых унаследован от базового класса `xref:BackOffice-WinForms:BaseCardControl_CL.adoc[BaseCardControl]`.
 ====
