--- a/modules/solutions/pages/cards/card-component/controls.adoc
+++ b/modules/solutions/pages/cards/card-component/controls.adoc
@@ -69,7 +69,7 @@
 ** `CommunicatorControl` -- элемент управления, отображающий статус пользователя в Microsoft Office Communicator/Lync, позволяющий осуществить сеанс связи с пользователем (звонок, отправка мгновенного сообщения, отправка электронной почты). Используется в `CommunicativeChooseBox` и `CommunicativeMultiChooseBox`.
 ** `Preview` -- элемент просмотра содержимого файла. Используются средства предпросмотра, установленные в операционной системе (аналогично Microsoft Outlook).
 
-[IMPORTANT]
+[WARNING]
 ====
 Пробную версию компонентов Developer Express можно получить с сайта https://www.devexpress.com/[devexpress.com], также необходимые сборки включены в инсталляционный пакет {dv} Client. При создании конечного продукта требуется приобрести соответствующую лицензию.
 ====
