--- a/modules/solutions/pages/cards/card-component/events.adoc
+++ b/modules/solutions/pages/cards/card-component/events.adoc
@@ -4,7 +4,7 @@
 
 Однако, при желании разработчик может переопределить одно или несколько из этих событий, чтобы реализовать в них собственную логику.
 
-[CAUTION]
+[WARNING]
 ====
 При переопределении событий, нужно не забыть вызвать обработчик базового класса!
 ====
@@ -14,7 +14,7 @@ image::ROOT:card-lifecycle-events.png[События жизненного цик
 
 Внешний контур схемы охватывает полный жизненный цикл компонента карточки, от момента его создания до момента выгрузки из памяти. Внутренний контур содержит последовательность событий, возникающий при активации компонента карточки для каждого независимого экземпляра данных.
 
-[IMPORTANT]
+[WARNING]
 ====
 {wincl} кэширует компонент карточки в памяти после первого обращения к нему, и впоследствии активирует этот же самый компонент при открытии всех карточек такого типа.
 
