--- a/modules/solutions/pages/cards/card-component/library.adoc
+++ b/modules/solutions/pages/cards/card-component/library.adoc
@@ -12,7 +12,7 @@
 
 Компонент библиотеки карточек является реализацией интерфейса `ICardLibraryInfo`, который определяет методы получения информации о библиотеке. Данный интерфейс реализован в классе `xref:Platform-WinForms:CardLibrary_CL.adoc[DocsVision.Platform.WinForms.CardLibrary]`, который можно использовать в качестве базового в собственных реализациях компонентов библиотек карточек. При этом нужно переопределить методы: `GetIcon`, `GetCardIcon`, `GetLibraryDefinition` и `GetCardDefinition`.
 
-[CAUTION]
+[WARNING]
 ====
 Номер версии в сборке библиотеки (`assemblyVersion.FileVersion`), должен совпадать с номером версии, который указан в XML-описании библиотеки. В противном случае будет появляться предупреждение о несовпадении версий библиотеки на сервере и на клиенте.
 ====
@@ -35,7 +35,7 @@
 У ресурсного файла обязательно необходимо установить атрибут `build action` -- `embedded resource`
 ====
 
-[IMPORTANT]
+[WARNING]
 ====
 Если при помощи нового инсталляционного пакета или пакета исправлений производится обновление сборки, содержащей компонент библиотеки карточек, может потребоваться перезагрузка приложения.
 
