--- a/modules/solutions/pages/cards/scheme/card-description.adoc
+++ b/modules/solutions/pages/cards/scheme/card-description.adoc
@@ -39,7 +39,7 @@ image::ROOT:card-general-info.png[Общая информация карточк
 ** _Allow to open as linked card_ -- атрибут для связанных карточек. Разрешает или запрещает открытие пользовательского интерфейса карточки из других карточек.
 ** _Card is securable_ -- регулирует механизм выдачи прав на данные карточки. При наличии данного признака, права могут быть назначены на все структурные элементы карточки (секции, строки секций). При отсутствии данного признака используется так называемый упрощённый режим -- права выдаются на карточку целиком.
 +
-[IMPORTANT]
+[WARNING]
 ====
 Для повышения производительности крайне НЕ рекомендуется устанавливать этот признак для карточек без особой необходимости!
 ====
@@ -50,7 +50,7 @@ image::ROOT:card-general-info.png[Общая информация карточк
 ** _Client-side data caching on disk is restricted_ -- атрибут позволяет запретить кэширование клиентских данных на диск. По умолчанию эта функция отключена.
 * _Default security descriptor_ -- дескриптор безопасности, который определяет набор, назначаемых прав по умолчанию при создании экземпляров карточки.
 +
-[IMPORTANT]
+[WARNING]
 ====
 В этом дескрипторе можно использовать только константные идентификаторы объектов (well-known security identifiers), т.к. создаваться экземпляры карточки будут в другом домене чем тот, где она разрабатывается.
 ====
