--- a/modules/solutions/pages/cards/scheme/dev-cards-and-lib.adoc
+++ b/modules/solutions/pages/cards/scheme/dev-cards-and-lib.adoc
@@ -1,6 +1,6 @@
 = Разработка карточек и библиотек карточек
 
-[IMPORTANT]
+[WARNING]
 ====
 Модификация карточек и решений, входящих в стандартную поставку системы {dv} ("{bo}" и "{wf}"), не допускается ни при каких условиях. Их исходный код не подлежит распространению.
 ====
@@ -37,7 +37,7 @@
 
 Пользователь системы может создавать новые карточки известных системе типов или удалять существующие карточки. Для добавления новых типов карточек необходимо пройти несколько этапов и начать нужно с xref:cards/scheme/dev-data-scheme.adoc[Разработки схемы данных].
 
-[IMPORTANT]
+[WARNING]
 ====
 Обратите внимание на то, что для работы с новой библиотекой карточек через {cns}, например, для обновления базы данных, необходимо реализовать xref:extensions/console-plugin.adoc[модуль расширения Консоли настройки], передав в нем схему новой библиотеки.
 ====
