--- a/modules/solutions/pages/cards/scheme/sections-description.adoc
+++ b/modules/solutions/pages/cards/scheme/sections-description.adoc
@@ -2,7 +2,7 @@
 
 Заполнение данных о секциях предполагает создание структуры (иерархии) секций данных карточки, указание их свойств и полей. Для добавления новой секции нужно воспользоваться командой _New section_ в секции _Sections_. После этого необходимо указать свойства новой секции и список входящих в неё полей.
 
-[CAUTION]
+[WARNING]
 ====
 Для корректной работы карточки требуется наличие у неё, как минимум, одной секции.
 ====
@@ -13,7 +13,7 @@ image::ROOT:card-sections-description.png[Описание секции карт
 .Описание секции содержит следующие свойства:
 * _Псевдоним_ -- псевдоним секции, с помощью которого к ней можно обращаться в коде.
 +
-[IMPORTANT]
+[WARNING]
 ====
 Псевдоним секции должен отличаться от псевдонима карточки. Псевдоним должен быть уникальным в рамках карточки.
 ====
@@ -55,7 +55,7 @@ image::ROOT:card-sections-description.png[Описание секции карт
 ** _Unique clustered index_ -- по полю строится уникальный кластерный индекс.
 ** _Unique non -- clustered index_ -- по полю строится уникальный некластерный индекс.
 +
-[IMPORTANT]
+[WARNING]
 ====
 Необходимо внимательно отнестись к созданию индексов, так как их не оптимальное создание (или попросту отсутствие) способно значительно понизить производительность всей системы.
 ====
@@ -66,7 +66,7 @@ image::ROOT:card-sections-description.png[Описание секции карт
 ** _Из раздела могут быть выбраны строки_ -- секцию можно использовать для выбора строк (чаще всего этот признак устанавливается для секций справочников).
 ** _Запись событий в журнал необязательна_ -- сообщение об изменении строки секции не будет записываться в системный журнал.
 +
-[CAUTION]
+[WARNING]
 ====
 Для повышения производительности крайне рекомендуется устанавливать этот режим для секций, с которыми производится интенсивная работа (например, для секций с данными журналирования).
 ====
