--- a/modules/solutions/pages/control.adoc
+++ b/modules/solutions/pages/control.adoc
@@ -2,7 +2,7 @@
 
 {dv} предлагает разработчикам возможность создавать собственные элементы управления и использовать их при проектировании разметки карточки в _Конструкторе разметок_.
 
-[IMPORTANT]
+[WARNING]
 ====
 Для разработки элементов управления, совместимых с _Конструктором разметок_, требуется лицензия на компоненты (WinForms) DevExpress.
 ====
@@ -251,7 +251,7 @@ public sealed class ExtensionPackage : ControlExtensionInfoPackage
 +
 В ветку требуется добавить строковый параметр, значение которого должно содержать полный путь к сборке, либо полное название класса, если сборка зарегистрирована в GAC.
 +
-[IMPORTANT]
+[WARNING]
 ====
 Ветка реестра может отличаться от приведенной при отличной разрядности операционной системы.
 ====
