--- a/modules/solutions/pages/distribution-client.adoc
+++ b/modules/solutions/pages/distribution-client.adoc
@@ -15,7 +15,7 @@
 [#paths]
 Путь для установки файлов обычно зависит от выбранной области установки. При установке "Только для текущего пользователя" это обычно путь: `$\КАТАЛОГ_ПРОФИЛЯ_ПОЛЬЗОВАТЕЛЯ\Local Settings\DocsVision\РЕШЕНИЕ\ВЕРСИЯ\Client\`, а при установке в область "Для всех пользователей" -- путь: `$\Program Files\DocsVision\РЕШЕНИЕ}\ВЕРСИЯ\Client\`.
 
-[IMPORTANT]
+[WARNING]
 ====
 Особенность работы Windows Installer такова, что даже при установке в режиме "только для текущего пользователя", ключи реестра для библиотек типов (_TypeLib_) будут создаваться в общей ветке реестра ({hklm}).
 
@@ -33,7 +33,7 @@ image::ROOT:installers-tab.png[Вкладка "Installers"]
 
 При обновлении версии решения на сервере клиентские компоненты будут обновлены на новую версию автоматически после первого обращения клиента к обновленному серверу.
 
-[IMPORTANT]
+[WARNING]
 ====
 Для корректного обновления решения на клиентских машинах при изменении версии на сервере в инсталляционном пакете новой версии решения необходимо сгенерировать новый _ProductCode_, но оставить прежнее значение _UpgradeCode_.
 ====
