--- a/modules/solutions/pages/distribution-server.adoc
+++ b/modules/solutions/pages/distribution-server.adoc
@@ -4,7 +4,7 @@
 
 Если решение предполагается установить на один конкретный сервер (разовая операция), то это действие можно выполнить вручную при помощи программы "CardManager" из Resource Kit, или запуском SQL-скрипта, предварительно сгенерированного "CardManager" для этой библиотеки карточек (команда _Сгенерировать сценарий SQL для библиотеки карточек_). Оба способа приведут к одинаковому результату -- загрузке описаний карточек решения в конкретную базу данных.
 
-[IMPORTANT]
+[WARNING]
 ====
 При каждом обновлении версии платформы на сервере все дополнительные решения необходимо заново загружать в базу данных. В противном случае карточки этих решений будут считаться устаревшими и станут недоступны для использования (данные не будут потеряны, просто карточки решения не будут видны в {wincl}е).
 ====
