--- a/modules/solutions/pages/extensions/console-plugin.adoc
+++ b/modules/solutions/pages/extensions/console-plugin.adoc
@@ -53,7 +53,7 @@
 
 `DocsVision.Tools.ServerConsole.IDBInformation` -- данный интерфейс является обязательным для модулей расширения, которые выполняют функции конфигурации или удаления решения. Методы данного интерфейса предназначены для загрузки каких-либо значений в базу данных (это необходимо, например, при установке новых библиотек карточек, или шлюзов Workflow).
 
-[IMPORTANT]
+[WARNING]
 ====
 Обратите внимание на то, что для работы (например, обновление базы данных) с собственной библиотекой карточек из программы {cns}, необходимо разработать и загрузить в {cns} расширение {wincl}а, которое реализует интерфейс `IDBInformation`. Данное расширение должно возвращать схему разработанной библиотеки карточек.
 ====
