--- a/modules/solutions/pages/extensions/winclient.adoc
+++ b/modules/solutions/pages/extensions/winclient.adoc
@@ -4,7 +4,7 @@
 
 Технически расширение {wincl}а представляет собой обычную карточку системы {dv}, которая должна разрабатывается по стандартному xref:cards/scheme/dev-cards-and-lib.adoc[сценарию].
 
-[IMPORTANT]
+[WARNING]
 ====
 В схеме карточки расширения должен быть установлен флаг `*Реализует расширения интерфейса хоста / Provides UI Extension*`. Также рекомендуется установить флаг `*Является справочником / Dictionary (only one instance allowed)*`, чтобы исключить возможность создания нескольких экземпляров карточки-расширения, что может привести к конфликтам при их вызове.
 ====
