--- a/modules/appendix/pages/webservice/files/FileCreate.adoc
+++ b/modules/appendix/pages/webservice/files/FileCreate.adoc
@@ -2,7 +2,7 @@
 
 Создаёт новый файл.
 
-[IMPORTANT]
+[WARNING]
 ====
 Данный метод не загружает содержимое файла в созданную в {dv} сущность -- для этого необходимо использовать метод `xref:webservice/files/FileWrite.adoc[FileWrite]`.
 ====
