Добавил Resource Kit

--- a/modules/appendix/pages/controls/docsvision/CardChooseBox.adoc
+++ b/modules/appendix/pages/controls/docsvision/CardChooseBox.adoc
@@ -28,7 +28,7 @@ image::ROOT:card-choose-box.png[Элемент управления "CardChooseB
 +
 [NOTE]
 ====
-Текстовый фильтр может быть составлен вручную или создан при помощи утилиты {dv} Explorer, входящей в Resource Kit.
+Текстовый фильтр может быть составлен вручную или создан при помощи утилиты {dv} Explorer, входящей в {rk}.
 ====
 +
 .Примера запроса, выбирающего задания, в которых текущий сотрудник назначен контролёром:
