--- a/modules/appendix/pages/webservice/search/SearchCards.adoc
+++ b/modules/appendix/pages/webservice/search/SearchCards.adoc
@@ -27,7 +27,7 @@ SOAPAction: "http://schemas.docsvision.com/Platform/2009-02-03/StorageServer/Sea
 sessionId:::
 Идентификатор пользовательской сессии
 filter:::
-Поисковый запрос в виде xml-документа. Сформировать запрос можно, в том числе, утилитой "Docsvision Explorer", входящей в Resource Kit.
+Поисковый запрос в виде xml-документа. Сформировать запрос можно, в том числе, утилитой "Docsvision Explorer", входящей в {rk}.
 
 == Ответ
 
