--- a/modules/samples/pages/faq.adoc
+++ b/modules/samples/pages/faq.adoc
@@ -88,7 +88,7 @@ $number = $client.NumGetFirstFree($sessionId, $numeratorCardID, $zoneName, $user
 Узнать идентификатор существующий карточки можно несколькими способами:
 
 * Посмотреть в {wincl}е -- идентификатор карточки отображается в её свойствах.
-* Используя утилиту {dv} Explorer, входящей в Resource Kit -- идентификатор карточки отображается в поле `Selected card ID`.
+* Используя утилиту {dv} Explorer, входящей в {rk} -- идентификатор карточки отображается в поле `Selected card ID`.
 
 Получить идентификатор созданной карточки, используя объектную модель::
 Для получения идентификатора объекта (например, объект document типа `DocsVision.BackOffice.ObjectModel.Document)` можно воспользоваться методом `ObjectContext.GetObjectRef(ObjectBase)`:
@@ -157,7 +157,7 @@ result = (((BaseCardSectionRow)document.GetSection(sectionID)[0])[fieldAlias] as
 <.> Или даже так, если через новую объектную модель.
 
 Как узнать идентификатор определённого вида карточки::
-Воспользуйтесь утилитой {dv} Explorer, входящей в Resource Kit.
+Воспользуйтесь утилитой {dv} Explorer, входящей в {rk}.
 
 . Нажать *Card types*. В открывшемся окне определить идентификатор типа карточки (идентификатор в "Selected type ID"), также идентификатор можно найти в разделе xref:schemas:ROOT:index.adoc[Описание полей стандартной карточки] (идентификатор указан вначале описания конкретной карточки).
 . Нажать *Cards*. В списке типов карточек выбрать "Справочник видов карточек", после чего нажать *Search*.
