--- a/modules/solutions/pages/cards/scheme/dev-data-scheme.adoc
+++ b/modules/solutions/pages/cards/scheme/dev-data-scheme.adoc
@@ -26,4 +26,4 @@ image::ROOT:section-kinds.png[Виды секций]
 * Создание и редактирование схемы данных.
 * Загрузка готовой схемы в базу данных.
 
-Для выполнения всех этих операций используется программа "CardManager", включённой в Resource Kit.
+Для выполнения всех этих операций используется программа "CardManager", включённой в {rk}.
