--- a/modules/solutions/pages/distribution-server.adoc
+++ b/modules/solutions/pages/distribution-server.adoc
@@ -2,7 +2,7 @@
 
 Если решение включает в себя какие-либо карточки (новые или модификацию имеющихся), то первоочередным шагом при его распространении является загрузка описаний этих карточек в базу данных на выбранном рабочем сервере.
 
-Если решение предполагается установить на один конкретный сервер (разовая операция), то это действие можно выполнить вручную при помощи программы "CardManager" из Resource Kit, или запуском SQL-скрипта, предварительно сгенерированного "CardManager" для этой библиотеки карточек (команда _Сгенерировать сценарий SQL для библиотеки карточек_). Оба способа приведут к одинаковому результату -- загрузке описаний карточек решения в конкретную базу данных.
+Если решение предполагается установить на один конкретный сервер (разовая операция), то это действие можно выполнить вручную при помощи программы "CardManager" из {rk}, или запуском SQL-скрипта, предварительно сгенерированного "CardManager" для этой библиотеки карточек (команда _Сгенерировать сценарий SQL для библиотеки карточек_). Оба способа приведут к одинаковому результату -- загрузке описаний карточек решения в конкретную базу данных.
 
 [WARNING]
 ====
