--- a/modules/views/pages/download-mode.adoc
+++ b/modules/views/pages/download-mode.adoc
@@ -15,7 +15,7 @@
 
 С другой стороны, могут существовать карточки, которые содержат сотни тысяч строк (например, справочники). Попытка загрузить все данные такой карточки за один вызов приведёт к чрезмерной задержке, поэтому в такой ситуации более оптимальным было бы получать данные меньшими порциями по мере их востребованности.
 
-Режим загрузки данных определяется для всей карточки в целом на этапе создания схемы данных в программе "CardManager", входящей в Resource Kit и распространяется на все её секции. Однако, в режиме исполнения (runtime) разработчик может переопределить это поведение (для карточки или для конкретных секций). Для этого служит свойство `FetchMode` объектов `xref:Platform-ObjectManager-CardData:CardData_CL.adoc[CardData]` и `xref:Platform-ObjectManager-SectionData:SectionData_CL.adoc[SectionData]`.
+Режим загрузки данных определяется для всей карточки в целом на этапе создания схемы данных в программе "CardManager", входящей в {rk} и распространяется на все её секции. Однако, в режиме исполнения (runtime) разработчик может переопределить это поведение (для карточки или для конкретных секций). Для этого служит свойство `FetchMode` объектов `xref:Platform-ObjectManager-CardData:CardData_CL.adoc[CardData]` и `xref:Platform-ObjectManager-SectionData:SectionData_CL.adoc[SectionData]`.
 
 [NOTE]
 ====
