--- a/modules/views/pages/links.adoc
+++ b/modules/views/pages/links.adoc
@@ -43,7 +43,7 @@
 
 == Ссылки на строки
 
-Ссылка на строку (`RefID`), в отличие от ссылки на карточки, не имеет типа и поэтому не обладает возможностями контроля целостности. Единственным способом управлять поведением связанного объекта для такого рода `полей` является признак *Удалять связанную строку при изменении значения* (Delete linked row on value change), который должен быть установлен при создании схемы карточки в программе "CardManager", входящей в Resource Kit. Если этот признак установлен, то любое изменение значения заполненного ссылочного поля (установка нового значения или сброс в null) приведёт к тому, что связанная строка (другой карточки) будет удалена.
+Ссылка на строку (`RefID`), в отличие от ссылки на карточки, не имеет типа и поэтому не обладает возможностями контроля целостности. Единственным способом управлять поведением связанного объекта для такого рода `полей` является признак *Удалять связанную строку при изменении значения* (Delete linked row on value change), который должен быть установлен при создании схемы карточки в программе "CardManager", входящей в {rk}. Если этот признак установлен, то любое изменение значения заполненного ссылочного поля (установка нового значения или сброс в null) приведёт к тому, что связанная строка (другой карточки) будет удалена.
 
 [NOTE]
 ====
