--- a/modules/appendix/pages/webservice/search/SearchCardsEx.adoc
+++ b/modules/appendix/pages/webservice/search/SearchCardsEx.adoc
@@ -29,7 +29,7 @@ SOAPAction: "http://schemas.docsvision.com/Platform/2009-02-03/StorageServer/Sea
 sessionId:::
 Идентификатор пользовательской сессии
 search:::
-Поисковый запрос в виде xml-документ. Сформировать запрос можно, в том числе, утилитой "Docsvision Explorer" (входит в Resource Kit).
+Поисковый запрос в виде xml-документ. Сформировать запрос можно, в том числе, утилитой "Docsvision Explorer" (входит в {rk}).
 flags:::
 Дополнительные флаг: 0 -- отсутствует; 1- в `search` передан идентификатор сохранённого поискового запроса, а не его содержимое
 parameters:::
