--- a/modules/cards/pages/general-information.adoc
+++ b/modules/cards/pages/general-information.adoc
@@ -252,7 +252,7 @@ IDocumentService documentService = objectContext.GetService<IDocumentService>();
 На уровне базы данных секция строка секции -- это строка таблицы, а секция -- сама таблица.
 ====
 
-Далее, для обобщения изложенной выше информации, представлена структура экземпляра карточки некого типа. Подобную структуру можно составить на основе данных, предоставляемых программой "Docsvision Explorer" из комплекта "Resource Kit".
+Далее, для обобщения изложенной выше информации, представлена структура экземпляра карточки некого типа. Подобную структуру можно составить на основе данных, предоставляемых программой "Docsvision Explorer" из комплекта "{rk}".
 
 .Структура экземпляра карточки
 image::ROOT:card-sample-structure.png[Структура экземпляра карточки]
