--- a/modules/samples/pages/components/command-plugin.adoc
+++ b/modules/samples/pages/components/command-plugin.adoc
@@ -9,7 +9,7 @@
 . Переопределить необходимые методы и свойства базового класса (см. пример).
 . Создать библиотеку карточек (доступна в xref:ROOT:attachment$winclientExtension.zip[архиве] проекта), включив в неё карточку, использующую созданный компонент.
 . Зарегистрировать реализованный компонент в GAC (предпочтительно) на всех клиентских машинах.
-. Зарегистрировать с использованием программы CardManager, входящей в Resource Kit, созданную библиотеку карточек на сервере {dv}.
+. Зарегистрировать с использованием программы CardManager, входящей в {rk}, созданную библиотеку карточек на сервере {dv}.
 
 [source,csharp]
 ----
