--- a/modules/Workflow/pages/Gates/DVGate.AddVariable_MT.adoc
+++ b/modules/Workflow/pages/Gates/DVGate.AddVariable_MT.adoc
@@ -34,4 +34,4 @@ VariableInfo:::
 +
 * `DVVariableType.DOCUMENT` -- возвращает `DVCard`
 * `DVVariableType.PRINCIPAL` -- возвращает `DVPrincipal`
-* `DVVariableType.FILe` -- - возвращает `DVFileCard`
+* `DVVariableType.FILe` -- возвращает `DVFileCard`
